// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bargraph matches the snapshot when volts is not a whole integer 1`] = `
<Bargraph
  volts={4.532}
>
  <SvgLoader
    onSVGReady={[Function]}
    path="o9-Bargraph-01.svg"
    style={null}
    svgXML={null}
  >
    <ReactSVG
      callback={[Function]}
      path="o9-Bargraph-01.svg"
      style={null}
      svgXML={null}
    >
      <svg
        data-src="o9-Bargraph-01.svg"
        style={null}
      />
    </ReactSVG>
  </SvgLoader>
</Bargraph>
`;

exports[`Bargraph matches the snapshot with volts of 0 1`] = `
<Bargraph
  volts={0}
>
  <SvgLoader
    onSVGReady={[Function]}
    path="o9-Bargraph-01.svg"
    style={null}
    svgXML={null}
  >
    <ReactSVG
      callback={[Function]}
      path="o9-Bargraph-01.svg"
      style={null}
      svgXML={null}
    >
      <svg
        data-src="o9-Bargraph-01.svg"
        style={null}
      />
    </ReactSVG>
  </SvgLoader>
</Bargraph>
`;

exports[`Bargraph matches the snapshot with volts of 1 1`] = `
<Bargraph
  volts={1}
>
  <SvgLoader
    onSVGReady={[Function]}
    path="o9-Bargraph-01.svg"
    style={null}
    svgXML={null}
  >
    <ReactSVG
      callback={[Function]}
      path="o9-Bargraph-01.svg"
      style={null}
      svgXML={null}
    >
      <svg
        data-src="o9-Bargraph-01.svg"
        style={null}
      />
    </ReactSVG>
  </SvgLoader>
</Bargraph>
`;

exports[`Bargraph matches the snapshot with volts of 2 1`] = `
<Bargraph
  volts={2}
>
  <SvgLoader
    onSVGReady={[Function]}
    path="o9-Bargraph-01.svg"
    style={null}
    svgXML={null}
  >
    <ReactSVG
      callback={[Function]}
      path="o9-Bargraph-01.svg"
      style={null}
      svgXML={null}
    >
      <svg
        data-src="o9-Bargraph-01.svg"
        style={null}
      />
    </ReactSVG>
  </SvgLoader>
</Bargraph>
`;

exports[`Bargraph matches the snapshot with volts of 3 1`] = `
<Bargraph
  volts={3}
>
  <SvgLoader
    onSVGReady={[Function]}
    path="o9-Bargraph-01.svg"
    style={null}
    svgXML={null}
  >
    <ReactSVG
      callback={[Function]}
      path="o9-Bargraph-01.svg"
      style={null}
      svgXML={null}
    >
      <svg
        data-src="o9-Bargraph-01.svg"
        style={null}
      />
    </ReactSVG>
  </SvgLoader>
</Bargraph>
`;

exports[`Bargraph matches the snapshot with volts of 4 1`] = `
<Bargraph
  volts={4}
>
  <SvgLoader
    onSVGReady={[Function]}
    path="o9-Bargraph-01.svg"
    style={null}
    svgXML={null}
  >
    <ReactSVG
      callback={[Function]}
      path="o9-Bargraph-01.svg"
      style={null}
      svgXML={null}
    >
      <svg
        data-src="o9-Bargraph-01.svg"
        style={null}
      />
    </ReactSVG>
  </SvgLoader>
</Bargraph>
`;

exports[`Bargraph matches the snapshot with volts of 5 1`] = `
<Bargraph
  volts={5}
>
  <SvgLoader
    onSVGReady={[Function]}
    path="o9-Bargraph-01.svg"
    style={null}
    svgXML={null}
  >
    <ReactSVG
      callback={[Function]}
      path="o9-Bargraph-01.svg"
      style={null}
      svgXML={null}
    >
      <svg
        data-src="o9-Bargraph-01.svg"
        style={null}
      />
    </ReactSVG>
  </SvgLoader>
</Bargraph>
`;
